examples/test/testpolicy6109.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6109
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key0: value3
      key36: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value36
          key1: value40
          key44: value4
      podSelector:
        matchLabels:
          key32: value43
